raft: add swagger
